--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,46 @@
 @import "tailwindcss";
-
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --Blue-400: hsl(180, 66%, 49%);
+  --Purple-950: hsl(257, 27%, 26%);
+  --Red-400: hsl(0, 87%, 67%);
+  --Gray-400: hsl(0, 0%, 75%);
+  --Gray-500: hsl(257, 7%, 63%);
+  --Gray-900: hsl(255, 11%, 22%);
+  --Gray-950: hsl(260, 8%, 14%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-background: #ffffff;
+  --color-foreground: #171717;
+  --color-Blue-400: hsl(180, 66%, 49%);
+  --color-Purple-950: hsl(257, 27%, 26%);
+  --color-Red-400: hsl(0, 87%, 67%);
+  --color-Gray-400: hsl(0, 0%, 75%);
+  --color-Gray-500: hsl(257, 7%, 63%);
+  --color-Gray-900: hsl(255, 11%, 22%);
+  --color-Gray-950: hsl(260, 8%, 14%);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+.container {
+  display: flex;
+  width: 80%;
+  margin: auto;
+}
+@layer components {
+  .teal {
+    @apply bg-Blue-400 text-white cursor-pointer transition;
+  }
+  .teal:hover {
+    @apply opacity-85;
+  }
 }
